# arduino-cuber

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  rubikcubeidkimbad;-;.cpp  test.cpp  tilapia.cpp  主.cpp
ArduinoMotorControl/: ArduinoMotorControl.sln
ArduinoMotorControl/ArduinoMotorControl/: ArduinoMotorControl.ino  ArduinoMotorControl.vcxproj  ArduinoMotorControl.vcxproj.filters
ArduinoMotorControl/ArduinoMotorControl/__vm/: .ArduinoMotorControl.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Configuration.Release.vmps.xml  Upload.vmps.xml
ImageRecognition/: a.out  compile.sh  main.cpp  main.sh
Pi Code/: CMakeLists.txt  facecube.c  main.cpp  search.c
Pi Code/include/: coordcube.h  search.h  stdafx.h
PiCode/: CMakeLists.txt  coordcube.c  cubiecube.c  main.cpp
PiCode/include/: color.h  cubiecube.h  facecube.h  facelet.h
